--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
                                     <div>
                                         <p class="font-medium">Электронная почта:</p>
                                         <a
-                                            href="mailto:gmads@yandex.ru"
+                                            href="mailto:vseds@yandex.ru"
                                             class="hover:text-blue-300 transition"
-                                            >gmads@yandex.ru</a
+                                            >vseds@yandex.ru</a
                                         >
                                     </div>
                                 </div>
@@ -286,7 +286,7 @@
                                     allowfullscreen="true"
                                     style="position: relative"
                                     loading="lazy"
-                                    aria-label="Карта расположения GMA Detailing в Ростове-на-Дону">
+                                    aria-label="Карта расположения VSE Detailing в Ростове-на-Дону">
                                 </iframe>
                             </div>
                         </div>
