--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="Профессиональный детейлинг с реальными фото работ." />
         <title>VSE Detailing</title>
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./style.css"/>
         <!-- Feather icons -->
         <script defer src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     </head>
