--- a/index.html
+++ b/index.html
@@ -7,15 +7,44 @@
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta
             name="description"
-            content="Профессиональный детейлинг автомобилей с 2017 года. Реальные результаты работ." />
-        <meta name="keywords" content="детейлинг, Ростов-на-Дону, полировка авто, чистка салона" />
-        <meta property="og:title" content="VSE Detailing - Детейлинг в Георгиевске" />
-        <meta property="og:description" content="Профессиональный детейлинг с реальными фото работ." />
-        <title>VSE Detailing</title>
-
-        <link rel="stylesheet" href="./style.css"/>
+            content="Профессиональная полировка лобовых стекол, фар и стеклянных поверхностей в Георгиевске. Удаление царапин, восстановление прозрачности" />
+        <meta
+            name="keywords"
+            content="полировка стекол, полировка лобового стекла, полировка фар Георгиевск, удаление царапин со стекла, детейлинг стекол, восстановление фар, полировка автомобильных стекол" />
+        <title>VSE Detailing | Полировка стекол автомобиля в Георгиевске</title>
+        <link rel="icon" type="image/png" href="/public/icons/vse-logo.png" />
+        <link rel="stylesheet" href="./style.css" />
         <!-- Feather icons -->
         <script defer src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "AutoDetailing",
+                "name": "VSE Detailing - Полировка стекол",
+                "description": "Профессиональная полировка автомобильных стекол, фар и стеклянных поверхностей",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "переулок Минераловодский, 10/3",
+                    "addressLocality": "Георгиевск",
+                    "addressCountry": "RU"
+                },
+                "geo": {
+                    "@type": "GeoCoordinates",
+                    "latitude": "44.1489",
+                    "longitude": "43.4697"
+                },
+                "telephone": "+7-903-468-74-60",
+                "openingHours": "Mo-Su 09:00-20:00",
+                "serviceType": "Полировка стекол, полировка фар, удаление царапин",
+                "areaServed": "Георгиевск, Ставропольский край",
+                "priceRange": "₽₽",
+                "aggregateRating": {
+                    "@type": "AggregateRating",
+                    "ratingValue": "5.0",
+                    "ratingCount": "1000"
+                }
+            }
+        </script>
     </head>
     <body class="bg-gray-50 font-sans">
         <!-- NAVBAR -->
@@ -271,6 +300,7 @@
                             href="https://instagram.com/vse0303"
                             target="_blank"
                             rel="noopener"
+                            style="color: #0000ee"
                             aria-label="Instagram">
                             <i data-feather="instagram" aria-hidden="true"></i>
                         </a>
@@ -280,22 +310,34 @@
                             href="https://wa.me/79034687460"
                             target="_blank"
                             rel="noopener"
+                            style="color: #0000ee"
                             aria-label="WhatsApp">
                             <i data-feather="message-circle" aria-hidden="true"></i>
                         </a>
 
                         <!-- Telegram -->
-                        <a href="https://t.me/kamo228" target="_blank" rel="noopener" aria-label="Telegram">
+                        <a
+                            href="https://t.me/kamo228"
+                            style="color: #0000ee"
+                            target="_blank"
+                            rel="noopener"
+                            aria-label="Telegram">
                             <i data-feather="send" aria-hidden="true"></i>
                         </a>
 
                         <!-- Звонок -->
-                        <a href="tel:+79034687460" aria-label="Позвонить">
+                        <a href="tel:+79034687460" style="color: #0000ee" aria-label="Позвонить">
                             <i data-feather="phone-call" aria-hidden="true"></i>
                         </a>
                     </div>
                 </div>
-
+                <div class="local-seo">
+                    <p>
+                        <strong>VSE Detailing</strong> - профессиональная полировка стекол в Георгиевске.
+                        Обслуживаем клиентов из Георгиевска, Минеральных Вод, Пятигорска и всего
+                        Ставропольского края.
+                    </p>
+                </div>
                 <p class="copyright">&copy; <span id="year"></span> VSE Detailing. Все права защищены.</p>
             </div>
         </footer>
