--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             name="keywords"
             content="полировка стекол, полировка лобового стекла, полировка фар Георгиевск, удаление царапин со стекла, детейлинг стекол, восстановление фар, полировка автомобильных стекол" />
         <title>VSE Detailing | Полировка стекол автомобиля в Георгиевске</title>
-        <link rel="icon" type="image/png" href="/public/icons/vse-logo.png" />
+        <link rel="icon" type="image/png" href="/favicon.png" />
         <link rel="stylesheet" href="./style.css" />
         <!-- Feather icons -->
         <script defer src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
